created a hover feature over the fitness icon plans

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
   </head>
   <body> 
 
+
+    <header> 
+      <div class="content">
+        <hgroup> 
+          <h1>rachellecakefit</h1> 
+          <i>you're the motivation</i> 
+        </hgroup> 
+      </div> 
+      <div class="overlay"></div> 
+    </header> 
+
+
     <div class="navbar-fixed">
       <nav class="white" role="navigation">
         <div class="nav-wrapper">
@@ -35,31 +47,36 @@
         </div>
       </nav>
     </div> 
-
-    <header> 
-      <div class="content">
-        <hgroup> 
-          <h1>rachellecakefit</h1> 
-          <i>you're the motivation</i> 
-        </hgroup> 
-      </div> 
-      <div class="overlay"></div> 
-    </header> 
   
     <div class="my_container">
+      <h4 class="center">Cake Fitness Plans</h4>
   <ul>
     <li class="block">
+      <figure class="plan-snip"> 
       <a href="#"><img class="plan-icon" src="images/bootie.png" />
-      <span>Home Plan</span></a>
+        <figcaption> 
+      <h2>Home Plan</h2> 
+      <p>The Home Plan revolves around workout routines without having access to a gym.</p> 
+    </figcaption>
+  </figure>
     </li>
     <li class="block">
+      <figure class="plan-snip">
       <a href="#"><img class="plan-icon" src="images/combo.png" />
-      <span>Combo Plan</span></a>
-    </li>
-    <li class="block">
-      <a href="#"><img class="plan-icon" src="images/gym.png" />
-      <span>Gym Plan</span></a>
-    </li>
+      <figcaption> 
+      <h2>Combo Plan</h2> 
+      <p>The Combo Plan has the home and gym plan.</p>
+    </figcaption>
+  </figure>
+   <li class="block">
+      <figure class="plan-snip">
+      <a href="#"><img class="plan-icon" src="images/combo.png" />
+      <figcaption> 
+      <h2>Combo Plan</h2> 
+      <p>The Combo Plan has the home and gym plan.</p>
+    </figcaption>
+  </figure>
+    
     
   </ul>
 </div>
