changed the opacity to make the fitness image clear when hover effect is being used

--- a/index.html
+++ b/index.html
@@ -24,65 +24,81 @@
   </head>
   <body> 
 
-
-    <header> 
-      <div class="content">
-        <hgroup> 
-          <h1>rachellecakefit</h1> 
-          <i>you're the motivation</i> 
-        </hgroup> 
-      </div> 
-      <div class="overlay"></div> 
-    </header> 
-
-
-    <div class="navbar-fixed">
-      <nav class="white" role="navigation">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">RH</a> 
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="navlinks" href="sass.html">Sass</a></li> 
-            <li><a class="navlinks" href="badges.html">Javascript</a></li> 
-          </ul> 
-        </div>
-      </nav>
+  <!-- Navbar -->
+  <div class="navbar-fixed">
+    <nav class="white" role="navigation">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">RH</a> 
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a class="navlinks" href="sass.html">Sass</a></li> 
+          <li><a class="navlinks" href="badges.html">Javascript</a></li> 
+        </ul> 
+      </div>
+    </nav>
+  </div> 
+  
+  <!-- Banner -->
+  <header> 
+    <div class="content">
+      <hgroup> 
+        <h1>rachellecakefit</h1> 
+        <i>you're the motivation</i> 
+      </hgroup> 
     </div> 
-  
+    <div class="overlay"></div> 
+  </header> 
+
+  <!-- Main Content -->
+  <main>
+    <div class="container">
+      <h3>
+    </div> 
+
+  </main>
+
+  <!-- Fitness Plan Section -->
+  <section> 
     <div class="my_container">
-      <h4 class="center">Cake Fitness Plans</h4>
-  <ul>
-    <li class="block">
-      <figure class="plan-snip"> 
-      <a href="#"><img class="plan-icon" src="images/bootie.png" />
-        <figcaption> 
-      <h2>Home Plan</h2> 
-      <p>The Home Plan revolves around workout routines without having access to a gym.</p> 
-    </figcaption>
-  </figure>
-    </li>
-    <li class="block">
-      <figure class="plan-snip">
-      <a href="#"><img class="plan-icon" src="images/combo.png" />
-      <figcaption> 
-      <h2>Combo Plan</h2> 
-      <p>The Combo Plan has the home and gym plan.</p>
-    </figcaption>
-  </figure>
-   <li class="block">
-      <figure class="plan-snip">
-      <a href="#"><img class="plan-icon" src="images/combo.png" />
-      <figcaption> 
-      <h2>Combo Plan</h2> 
-      <p>The Combo Plan has the home and gym plan.</p>
-    </figcaption>
-  </figure>
+    <h4 class="center">Cake Fitness Plans</h4>
     
-    
-  </ul>
-</div>
+    <!-- Fitness Plan Images -->
+    <ul>
+      <!-- Home Plan  -->
+      <li class="block">
+        <figure class="plan-snip"> 
+          <a href="#"><img class="plan-icon" src="images/bootie.png" />
+          <figcaption> 
+            <h2>Home Plan</h2> 
+            <p>The Home Plan revolves around workout routines without having access to a gym.</p> 
+          </figcaption>
+        </figure>
+      </li>
+      <!-- Combo Plan -->
+      <li class="block">
+        <figure class="plan-snip">
+          <a href="#"><img class="plan-icon" src="images/combo.png" />
+          <figcaption> 
+            <h2>Combo Plan</h2> <p>The Combo Plan has the home and gym plan.</p>
+          </figcaption>
+        </figure>
+      </li>
+      <!-- Gym Plan  -->
+      <li class="block">
+        <figure class="plan-snip">
+          <a href="#"><img class="plan-icon" src="images/gym.png" />
+          <figcaption> 
+            <h2>Combo Plan</h2> <p>The Combo Plan has the home and gym plan.</p>
+          </figcaption>
+        </figure>
+      </li>
+    </ul>
+  </div>
+</section>
 
-  
 
+
+
+   
 
    
   <!-- ==============================================
